--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 certifi==2021.5.30
 charset-normalizer==2.0.6
+ibm-cloud-sdk-core==3.11.3
+ibm-watson==5.3.0
 idna==3.2
 oauthlib==3.1.1
+PyJWT==2.1.0
 PySocks==1.7.1
+python-dateutil==2.8.2
 python-dotenv==0.19.0
 requests==2.26.0
 requests-oauthlib==1.3.0
@@ -12,3 +16,4 @@ style==1.1.0
 tweepy==3.10.0
 update==0.0.1
 urllib3==1.26.7
+websocket-client==1.1.0
